[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/fonts/rubik-semibold-14.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/TutorialWindow.gd" type="Script" id=2]

[node name="TutorialWindow" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 360, 180 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -80.0
margin_right = 170.0
margin_bottom = 80.0
rect_min_size = Vector2( 340, 160 )
custom_fonts/normal_font = ExtResource( 1 )
text = "Your first Watervine is producing!

Building plants spends resources from the Builder Inventory, let's automate adding water to the inventory.

Try building a pipe (press 1) next to our Watervine."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.54902 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DismissButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -28.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 1 )
text = "Dismiss (45)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DismissTimer" type="Timer" parent="."]

[node name="PromptIOTimer" type="Timer" parent="."]
[connection signal="pressed" from="DismissButton" to="." method="_on_DismissButton_pressed"]
[connection signal="timeout" from="DismissTimer" to="." method="_on_DismissTimer_timeout"]
[connection signal="timeout" from="PromptIOTimer" to="." method="_on_PromptIOTimer_timeout"]
